minor alignment fixes

--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -57,11 +57,17 @@
 }
 
 @media (max-width: 580px) {
+  .about-image {
+    margin-top: 4em;
+    text-align: center;
+  }
+
   .animated-info {
     min-width: 200px;
   }
+
   .animated-item {
-    font-size: 24px;
+    font-size: 2rem;
   }
 }
 
